--- a/dockerfiles/web_api/requirements_web.txt
+++ b/dockerfiles/web_api/requirements_web.txt
@@ -2,7 +2,8 @@ uvicorn==0.23.2
 fastapi==0.101.1
 python-multipart==0.0.6
 aiofiles==23.2.1
-pika==1.3.2
+aio-pika==9.2.2
 gunicorn==21.2.0
 jinja2==3.1.2
 requests==2.31.0
+websockets==11.0.3
